==> apache/nuttx/arch/arm/src/stm32/stm32f33xxx_adc.c <==
#include <nuttx/config.h>
#include <stdio.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <string.h>
#include <semaphore.h>
#include <errno.h>
#include <assert.h>
#include <debug.h>
#include <unistd.h>
#include <arch/board/board.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/analog/adc.h>
#include <nuttx/analog/ioctl.h>
#include "up_internal.h"
#include "up_arch.h"
#include "chip.h"
#include "stm32.h"
#include "stm32_dma.h"
#include "stm32_adc.h"
#  define ADC_HAVE_INJECTED 1
#  define ADC1_INJECTED_CHAN 0
#  define ADC1_HAVE_JEXTSEL
#  define ADC2_INJECTED_CHAN 0
#  define ADC2_HAVE_JEXTSEL
#define STM32_RCC_RSTR    STM32_RCC_AHBRSTR
#define STM32_RCC_ENR     STM32_RCC_AHBENR
#define RCC_RSTR_ADC12RST RCC_AHBRSTR_ADC12RST
#define RCC_RSTR_ADC12EN  RCC_AHBENR_ADC12EN
#define STM32_ADC_DMAREG_OFFSET    STM32_ADC_CFGR_OFFSET
#define ADC_DMAREG_DMA             ADC_CFGR_DMAEN
#define STM32_ADC_EXTREG_OFFSET    STM32_ADC_CFGR_OFFSET
#define ADC_EXTREG_EXTSEL_MASK     ADC_CFGR_EXTSEL_MASK
#define ADC_EXTREG_EXTEN_MASK      ADC_CFGR_EXTEN_MASK
#define ADC_EXTREG_EXTEN_DEFAULT   ADC_CFGR_EXTEN_RISING
#define STM32_ADC_JEXTREG_OFFSET   STM32_ADC_JSQR_OFFSET
#define ADC_JEXTREG_JEXTSEL_MASK   ADC_JSQR_JEXTSEL_MASK
#define ADC_JEXTREG_JEXTEN_MASK    ADC_JSQR_JEXTEN_MASK
#define ADC_JEXTREG_JEXTEN_DEFAULT ADC_JSQR_JEXTEN_RISING
#define ADC_ISR_EOC                ADC_INT_EOC
#define ADC_IER_EOC                ADC_INT_EOC

static int adc_bind(FAR struct adc_dev_s *dev,
                    FAR const struct adc_callback_s *callback)
{
#ifndef CONFIG_STM32_ADC_NOIRQ
  FAR struct stm32_dev_s *priv = (FAR struct stm32_dev_s *)dev->ad_priv;

  DEBUGASSERT(priv != NULL);
  priv->cb = callback;
#endif

  return OK;
}

static void adc_reset(FAR struct adc_dev_s *dev)
{
  FAR struct stm32_dev_s *priv = (FAR struct stm32_dev_s *)dev->ad_priv;
  irqstate_t flags;
  uint32_t clrbits;
  uint32_t setbits;
#ifdef ADC_HAVE_TIMER
  int ret;
#endif

  ainfo("intf: %d\n", priv->intf);
  flags = enter_critical_section();

  /* Turn off the ADC so we can write the RCC bits */

  adc_enable(priv, false);

  /* Only if this is the first instance */

  if (priv->cmn->initialized <= 0)
    {
      /* Enable ADC reset state */

      adc_rccreset(priv, true);

      /* Release ADC from reset state */

      adc_rccreset(priv, false);
    }

  /* Set voltage regular enable to intermediate state */

  adc_modifyreg(priv, STM32_ADC_CR_OFFSET, ADC_CR_ADVREGEN_MASK,
                ADC_CR_ADVREGEN_INTER);

  /* Enable the ADC voltage regulator */

  adc_modifyreg(priv, STM32_ADC_CR_OFFSET, ADC_CR_ADVREGEN_MASK,
                ADC_CR_ADVREGEN_ENABLED);

  /* Wait for the ADC voltage regulator to startup */

  up_udelay(10);

#if 0 /* Doesn't work */

  /* Calibrate the ADC */

  adc_modifyreg(priv, STM32_ADC_CR_OFFSET, ADC_CR_ADCALDIF, AD_CR_ADCAL);

  /* Wait for the calibration to complete */

  while ((adc_getreg(priv, STM32_ADC_CR_OFFSET) & ADC_CR_ADCAL) != 0);

#endif

  /* Initialize the watchdog 1 threshold register */

  adc_putreg(priv, STM32_ADC_TR1_OFFSET, 0x0fff0000);

  /* Initialize the same sample time for each ADC.
   * During sample cycles channel selection bits must remain unchanged.
   */

  adc_putreg(priv, STM32_ADC_SMPR1_OFFSET, priv->smp1);
  adc_putreg(priv, STM32_ADC_SMPR2_OFFSET, priv->smp2);

  /* Enable the analog watchdog */

  clrbits = ADC_CFGR_AWD1CH_MASK;
  setbits = ADC_CFGR_AWD1EN | ADC_CFGR_AWD1SGL |
            (priv->r_chanlist[0] << ADC_CFGR_AWD1CH_SHIFT);

  /* Set the resolution of the conversion */

  clrbits |= ADC_CFGR_RES_MASK;
  setbits |= priv->resolution << ADC_CFGR_RES_SHIFT;

#ifdef ADC_HAVE_DMA
  if (priv->hasdma)
    {
      /* Set DMA mode */

      clrbits |= ADC_CFGR_DMACFG;

      setbits |= priv->dmacfg;

      /* Enable DMA */

      setbits |= ADC_CFGR_DMAEN;
    }
#endif

  /* Disable continuous mode and set align to right */

  clrbits |= ADC_CFGR_CONT | ADC_CFGR_ALIGN;

  /* Disable external trigger for regular channels */

  clrbits |= ADC_CFGR_EXTEN_MASK;
  setbits |= ADC_CFGR_EXTEN_NONE;

  /* Set CFGR configuration */

  adc_modifyreg(priv, STM32_ADC_CFGR_OFFSET, clrbits, setbits);

#ifndef CONFIG_STM32_ADC_NOIRQ
  /* Enable interrupt flags, but disable overrun interrupt */

  clrbits = ADC_IER_OVR;
  setbits = ADC_IER_ALLINTS & ~ADC_IER_OVR;

  /* Set IER configuration */

  adc_modifyreg(priv, STM32_ADC_IER_OFFSET, clrbits, setbits);
#endif

  /* Configuration of the regular channel conversions */

  if (priv->cr_channels > 0)
    {
      adc_set_ch(dev, 0);
    }

  /* ADC CCR configuration */

  clrbits = ADC_CCR_DUAL_MASK | ADC_CCR_DELAY_MASK | ADC_CCR_DMACFG |
            ADC_CCR_MDMA_MASK | ADC_CCR_CKMODE_MASK | ADC_CCR_VREFEN |
            ADC_CCR_TSEN | ADC_CCR_VBATEN;
  setbits = ADC_CCR_DUAL_IND | ADC_CCR_DELAY(0) | ADC_CCR_MDMA_DISABLED |
            ADC_CCR_CKMODE_ASYNCH;

  if (priv->base == STM32_ADC1_BASE || priv->base == STM32_ADC2_BASE)
    {
      stm32_modifyreg32(STM32_ADC12_CCR, clrbits, setbits);
    }

  stm32_modifyreg32(STM32_ADC12_CCR, clrbits, setbits);

#ifdef ADC_HAVE_DMA

  /* Enable DMA */

  if (priv->hasdma)
    {
      /* Stop and free DMA if it was started before */

      if (priv->dma != NULL)
        {
          stm32_dmastop(priv->dma);
          stm32_dmafree(priv->dma);
        }

      priv->dma = stm32_dmachannel(priv->dmachan);

#ifndef CONFIG_STM32_ADC_NOIRQ
      stm32_dmasetup(priv->dma,
                     priv->base + STM32_ADC_DR_OFFSET,
                     (uint32_t)priv->r_dmabuffer,
                     priv->rnchannels,
                     ADC_DMA_CONTROL_WORD);

      stm32_dmastart(priv->dma, adc_dmaconvcallback, dev, false);
#endif
    }

#endif

  /* Set ADON to wake up the ADC from the power down state */

  adc_enable(priv, true);

  /* EXTSEL selection: These bits select the external event used
   * to trigger the start of conversion of a regular group.  NOTE:
   *
   * - The position with of the EXTSEL field varies from one STM32 MCU
   *   to another.
   * - The width of the EXTSEL field varies from one STM32 MCU to another.
   * - The value in priv->extsel is already shifted into the correct bit
   *   position.
   */

#ifdef ADC_HAVE_EXTSEL
  if (priv->extsel & HAVE_EXTSEL_MASK)
    {
      ainfo("Initializing extsel = 0x%08x\n", (priv->extsel & ~HAVE_EXTSEL_MASK));

      adc_modifyreg(priv, STM32_ADC_EXTREG_OFFSET,
                    ADC_EXTREG_EXTEN_MASK | ADC_EXTREG_EXTSEL_MASK,
                    ADC_EXTREG_EXTEN_DEFAULT | (priv->extsel & ~HAVE_EXTSEL_MASK));
    }
#endif

#ifdef ADC_HAVE_INJECTED
  /* Configuration of the injected channel conversions after adc enabled */

  if (priv->cj_channels > 0)
    {
      adc_inj_set_ch(dev, 0);
    }
#endif

#ifdef ADC_HAVE_TIMER
  if (priv->tbase != 0)
    {
      ret = adc_timinit(priv);
      if (ret < 0)
        {
          aerr("ERROR: adc_timinit failed: %d\n", ret);
        }
    }
#ifndef CONFIG_STM32_ADC_NO_STARTUP_CONV
  else
#endif
#endif
#ifndef CONFIG_STM32_ADC_NO_STARTUP_CONV
    {
      adc_startconv(priv, true);

#ifdef ADC_HAVE_INJECTED
      adc_inj_startconv(priv, true);
#endif
    }
#endif

  leave_critical_section(flags);

  ainfo("ISR:  0x%08x CR:   0x%08x CFGR: 0x%08x\n",
        adc_getreg(priv, STM32_ADC_ISR_OFFSET),
        adc_getreg(priv, STM32_ADC_CR_OFFSET),
        adc_getreg(priv, STM32_ADC_CFGR_OFFSET));

  ainfo("SQR1: 0x%08x SQR2: 0x%08x SQR3: 0x%08x\n",
        adc_getreg(priv, STM32_ADC_SQR1_OFFSET),
        adc_getreg(priv, STM32_ADC_SQR2_OFFSET),
        adc_getreg(priv, STM32_ADC_SQR3_OFFSET));

  ainfo("SQR4: 0x%08x\n", adc_getreg(priv, STM32_ADC_SQR4_OFFSET));

  if (priv->base == STM32_ADC1_BASE || priv->base == STM32_ADC2_BASE)
    {
      ainfo("CCR:  0x%08x\n", getreg32(STM32_ADC12_CCR));
    }

  ainfo("SMPR1: 0x%08x SMPR2: 0x%08x\n",
        adc_getreg(priv, STM32_ADC_SMPR1_OFFSET),
        adc_getreg(priv, STM32_ADC_SMPR2_OFFSET));

  ainfo("JSQR: 0x%08x DIFSEL: 0x%08x IER: 0x%08x\n",
        adc_getreg(priv, STM32_ADC_JSQR_OFFSET),
        adc_getreg(priv, STM32_ADC_DIFSEL_OFFSET),
        adc_getreg(priv, STM32_ADC_IER_OFFSET));
}

static int adc_setup(FAR struct adc_dev_s *dev)
{
#ifndef CONFIG_STM32_ADC_NOIRQ
  FAR struct stm32_dev_s *priv = (FAR struct stm32_dev_s *)dev->ad_priv;
#endif
  int ret = OK;

  /* Attach the ADC interrupt */

#ifndef CONFIG_STM32_ADC_NOIRQ
  ret = irq_attach(priv->irq, priv->isr, NULL);
  if (ret < 0)
    {
      ainfo("irq_attach failed: %d\n", ret);
      return ret;
    }
#endif

  /* Make sure that the ADC device is in the powered up, reset state */

  adc_reset(dev);

  /* Enable the ADC interrupt */

#ifndef CONFIG_STM32_ADC_NOIRQ
  ainfo("Enable the ADC interrupt: irq=%d\n", priv->irq);
  up_enable_irq(priv->irq);
#endif

  return ret;
}

static void adc_shutdown(FAR struct adc_dev_s *dev)
{
  FAR struct stm32_dev_s *priv = (FAR struct stm32_dev_s *)dev->ad_priv;

  adc_enable(priv, false);

  /* Disable ADC interrupts and detach the ADC interrupt handler */

#ifndef CONFIG_STM32_ADC_NOIRQ
  up_disable_irq(priv->irq);
  irq_detach(priv->irq);
#endif

  if (priv->cmn->initialized <= 1)
    {
      /* Disable and reset the ADC module only when last instance */

      adc_rccreset(priv, true);

      /* Decrease instances counter */
    }

  priv->cmn->initialized -= 1;
}

static void adc_rxint(FAR struct adc_dev_s *dev, bool enable)
{
  FAR struct stm32_dev_s *priv = (FAR struct stm32_dev_s *)dev->ad_priv;
  uint32_t regval;

  ainfo("intf: %d enable: %d\n", priv->intf, enable ? 1 : 0);

  if (enable)
    {
      /* Enable the analog watchdog / overrun interrupts, and if no DMA,
       * end-of-conversion ADC.
       */

      regval = ADC_IER_ALLINTS;
#ifdef ADC_HAVE_DMA
      if (priv->hasdma)
        {
          regval &= ~(ADC_IER_EOC | ADC_IER_JEOC);
        }
#endif

      adc_modifyreg(priv, STM32_ADC_IER_OFFSET, 0, regval);
    }
  else
    {
      /* Disable all ADC interrupts */

      adc_modifyreg(priv, STM32_ADC_IER_OFFSET, ADC_IER_ALLINTS, 0);
    }
}

static int adc_ioctl(FAR struct adc_dev_s *dev, int cmd, unsigned long arg)
{
  FAR struct stm32_dev_s *priv = (FAR struct stm32_dev_s *)dev->ad_priv;
  int ret = OK;

  switch (cmd)
    {
      case ANIOC_TRIGGER:
        {
          /* Start regular conversion if regular channels configured */

          if (priv->cr_channels > 0)
            {
              adc_startconv(priv, true);
            }

#ifdef ADC_HAVE_INJECTED
          /* Start injected conversion if injected channels configured */

          if (priv->cj_channels > 0)
            {
              adc_inj_startconv(priv, true);
            }
#endif

          break;
        }
      default:
        {
          aerr("ERROR: Unknown cmd: %d\n", cmd);
          ret = -ENOTTY;
          break;
        }
    }

  return ret;
}

static int adc_interrupt(FAR struct adc_dev_s *dev)
{
  FAR struct stm32_dev_s *priv = (FAR struct stm32_dev_s *)dev->ad_priv;
  uint32_t regval;
  uint32_t pending;
  int32_t  data;

  regval  = adc_getreg(priv, STM32_ADC_ISR_OFFSET);
  pending = regval & ADC_ISR_ALLINTS;
  if (pending == 0)
    {
      return OK;
    }

  /* Identifies the interruption AWD, OVR or EOC */

  if ((regval & ADC_ISR_AWD) != 0)
    {
      awarn("WARNING: Analog Watchdog, Value converted out of range!\n");
    }

  if ((regval & ADC_ISR_OVR) != 0)
    {
      awarn("WARNING: Overrun has occurred!\n");
    }

  /* EOC: End of conversion */

  if ((regval & ADC_ISR_EOC) != 0)
    {
      /* Read the converted value and clear EOC bit
       * (It is cleared by reading the ADC_DR)
       */

      data = adc_getreg(priv, STM32_ADC_DR_OFFSET) & ADC_DR_RDATA_MASK;

      /* Verify that the upper-half driver has bound its callback functions */

      if (priv->cb != NULL)
        {
          /* Give the ADC data to the ADC driver.  The ADC receive() method
           * accepts 3 parameters:
           *
           * 1) The first is the ADC device instance for this ADC block.
           * 2) The second is the channel number for the data, and
           * 3) The third is the converted data for the channel.
           */

          DEBUGASSERT(priv->cb->au_receive != NULL);
          priv->cb->au_receive(dev, priv->r_chanlist[priv->current], data);
        }

      /* Set the channel number of the next channel that will complete
       * conversion.
       */

      priv->current++;

      if (priv->current >= priv->rnchannels)
        {
          /* Restart the conversion sequence from the beginning */

          priv->current = 0;
        }
    }

  /* Clear pending interrupts */

  adc_putreg(priv, STM32_ADC_ISR_OFFSET, pending);

  return OK;
}

struct adc_dev_s *stm32_adcinitialize(int intf, FAR const uint8_t *chanlist,
                                      int channels)
{
  FAR struct adc_dev_s *dev;
  FAR struct stm32_dev_s *priv;
  uint8_t cr_channels = 0;
#ifdef ADC_HAVE_INJECTED
  uint8_t cj_channels = 0;
  FAR uint8_t *j_chanlist = NULL;
#endif

  switch (intf)
    {
#ifdef CONFIG_STM32_ADC1
      case 1:
        {
          ainfo("ADC1 selected\n");
          dev         = &g_adcdev1;
          cr_channels = channels - ADC1_INJECTED_CHAN;
#ifdef ADC_HAVE_INJECTED
          cj_channels = ADC1_INJECTED_CHAN;
          j_chanlist  = (FAR uint8_t *)chanlist + cr_channels;
#endif
          break;
        }
#endif
#ifdef CONFIG_STM32_ADC2
      case 2:
        {
          ainfo("ADC2 selected\n");
          dev         = &g_adcdev2;
          cr_channels = channels - ADC2_INJECTED_CHAN;
#ifdef ADC_HAVE_INJECTED
          cj_channels = ADC2_INJECTED_CHAN;
          j_chanlist  = (FAR uint8_t *)chanlist + cr_channels;
#endif
          break;
        }
#endif
      default:
        {
          aerr("ERROR: No ADC interface defined\n");
          return NULL;
        }
    }

  /* Configure the selected ADC */

  priv = (FAR struct stm32_dev_s *)dev->ad_priv;

  DEBUGASSERT(cr_channels <= ADC_REG_MAX_SAMPLES);

  /* Configure regular channels */

  priv->cr_channels = cr_channels;
  memcpy(priv->r_chanlist, chanlist, cr_channels);

#ifdef ADC_HAVE_INJECTED
  /* Configure injected channels */

  DEBUGASSERT(cj_channels <= ADC_INJ_MAX_SAMPLES);

  priv->cj_channels = cj_channels;
  memcpy(priv->j_chanlist, j_chanlist, cj_channels);
#endif

#ifndef CONFIG_STM32_ADC_NOIRQ
  priv->cb          = NULL;
#endif

#ifdef ADC_HAVE_INJECTED
  ainfo("intf: %d cr_channels: %d, cj_channels: %d\n",
        intf, priv->cr_channels, priv->cj_channels);
#else
  ainfo("intf: %d cr_channels: %d\n", intf, priv->cr_channels);
#endif

  /* Increase instances counter */

  priv->cmn->initialized += 1;

  return dev;
}
